#noissue: Set the same Version than the AssemblyVersion.

--- a/crypto/BouncyCastle_NetCore.csproj
+++ b/crypto/BouncyCastle_NetCore.csproj
@@ -3,6 +3,7 @@
     <RootNamespace>Org.BouncyCastle</RootNamespace>
     <AssemblyName>BouncyCastle.Crypto</AssemblyName>
     <AssemblyVersion>1.8.6</AssemblyVersion>
+    <Version>$(AssemblyVersion)</Version>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <DocumentationFile>BouncyCastle.Crypto.xml</DocumentationFile>
